Add notes about GC related JVM options